[gd_scene load_steps=4 format=2]

[ext_resource path="res://Src/Outgame/Touch_controller.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/GUI/arrowLeft.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/GUI/arrowRight.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="right" type="TextureButton" parent="CanvasLayer"]
margin_left = 1150.0
margin_top = 600.0
margin_right = 1250.0
margin_bottom = 700.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureButton" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 600.0
margin_right = 150.0
margin_bottom = 700.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="CanvasLayer/right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="CanvasLayer/right" to="." method="_on_right_button_up"]
[connection signal="button_down" from="CanvasLayer/left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="CanvasLayer/left" to="." method="_on_left_button_up"]
